# bin_bot

./: Cargo.toml  README.md
src/: endpoints.rs  json_formats.rs  lib.rs  main.rs  websockets.rs
