[package]
name = "bin_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.78"
tokio-tungstenite = { version = "*", features = ["rustls-tls-native-roots"] }
native-tls = "0.2.8"
futures-util = "0.3"
sha2 = "0.10.2"
hmac = "0.12.1"
hex-literal = "0.3.4"
